demos/devdocs/0.62.0/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:423](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L423)

## Properties

### completedAngles

```ts
completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:445](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L445)

---

### completedMeasurements

```ts
completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:444](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L444)

---

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:442](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L442)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:443](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L443)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:427](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L427)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:425](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L425)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:433](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L433)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:431](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L431)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:441](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L441)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:439](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L439)

---

### opts

```ts
opts: NVConfigOptions;
```

Defined in: [nvdocument.ts:437](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L437)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:429](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L429)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:435](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L435)
