demos/devdocs/0.67.0/nvdocument/type-aliases/ExportDocumentData.md
# Type Alias: ExportDocumentData

```ts
type ExportDocumentData = object;
```

Defined in: [nvdocument.ts:402](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L402)

## Properties

### completedAngles

```ts
completedAngles: CompletedAngle[];
```

Defined in: [nvdocument.ts:417](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L417)

---

### completedMeasurements

```ts
completedMeasurements: CompletedMeasurement[];
```

Defined in: [nvdocument.ts:416](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L416)

---

### connectomes

```ts
connectomes: string[];
```

Defined in: [nvdocument.ts:414](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L414)

---

### customData

```ts
customData: string;
```

Defined in: [nvdocument.ts:415](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L415)

---

### encodedDrawingBlob

```ts
encodedDrawingBlob: string;
```

Defined in: [nvdocument.ts:405](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L405)

---

### encodedImageBlobs

```ts
encodedImageBlobs: string[];
```

Defined in: [nvdocument.ts:404](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L404)

---

### imageOptionsArray

```ts
imageOptionsArray: ImageFromUrlOptions[];
```

Defined in: [nvdocument.ts:408](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L408)

---

### imageOptionsMap

```ts
imageOptionsMap: Map<string, number>;
```

Defined in: [nvdocument.ts:407](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L407)

---

### labels

```ts
labels: NVLabel3D[];
```

Defined in: [nvdocument.ts:413](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L413)

---

### meshesString

```ts
meshesString: string;
```

Defined in: [nvdocument.ts:411](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L411)

---

### meshOptionsArray?

```ts
optional meshOptionsArray: unknown[];
```

Defined in: [nvdocument.ts:412](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L412)

---

### opts

```ts
opts: EncodedNVConfigOptions | Partial<EncodedNVConfigOptions>;
```

Defined in: [nvdocument.ts:410](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L410)

---

### previewImageDataURL

```ts
previewImageDataURL: string;
```

Defined in: [nvdocument.ts:406](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L406)

---

### sceneData

```ts
sceneData: Partial<SceneData>;
```

Defined in: [nvdocument.ts:409](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L409)

---

### title?

```ts
optional title: string;
```

Defined in: [nvdocument.ts:403](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvdocument.ts#L403)
